--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 SECRET_KEY = secret
-# MONGO_DB = mongodb+srv://admin:mWIwzYUSbXhR3Qn5@project-wallet-app.ifoipjf.mongodb.net/db  
+MONGO_DB = mongodb+srv://admin:mWIwzYUSbXhR3Qn5@project-wallet-app.ifoipjf.mongodb.net/db
