--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.4.5",
     "react-query": "^3.39.3",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.1",
