--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,8 @@
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
-    "yup": "^1.3.2"
+    "yup": "^1.3.2",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
