--- a/client/package.json
+++ b/client/package.json
@@ -16,27 +16,26 @@
     "chart.js": "^4.4.0",
     "dotenv": "^16.3.1",
     "formik": "^2.4.5",
-    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
-    "react-media": "^1.10.0",
+    "react-loader-spinner": "^5.4.5",
     "react-query": "^3.39.3",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.1",
+    "react-select": "^5.8.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
-    "styled-components": "^6.1.1",
-    "toolkit": "^1.5.4",
-    "yup": "^1.3.2"
+    "yup": "^1.3.2",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
-    "eslint": "^8.55.0",
+    "eslint": "^8.53.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
