--- a/client/package.json
+++ b/client/package.json
@@ -10,17 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mui/material": "^5.14.19",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.20",
+    "@mui/styled-engine": "^5.14.20",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.2",
     "chart.js": "^4.4.0",
     "dotenv": "^16.3.1",
     "formik": "^2.4.5",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
+    "react-ellipsis-text": "^1.2.1",
     "react-loader-spinner": "^5.4.5",
+    "react-media": "^1.10.0",
     "react-query": "^3.39.3",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.1",
