--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
     "react-ellipsis-text": "^1.2.1",
+    "react-icons": "^4.12.0",
     "react-loader-spinner": "^5.4.5",
     "react-media": "^1.10.0",
     "react-query": "^3.39.3",
